--- a/app/views/events.html
+++ b/app/views/events.html
@@ -40,6 +40,13 @@
         </span>
       </md-tab-label>
     </md-tab>
+    <md-tab ui-sref="events.subcategory">
+      <md-tab-label>
+        <span>
+          Sub Category
+        </span>
+      </md-tab-label>
+    </md-tab>
     <md-tab ui-sref="events.addWinner">
       <md-tab-label>
         <span>
