--- a/app/views/events/addevent.html
+++ b/app/views/events/addevent.html
@@ -12,7 +12,14 @@
 				<div class="form-group">
 					<label for="Category" class="control-label col-sm-2">Category&nbsp;:</label>
 					<div class="col-sm-10">
-						<select id="category" name="category" ng-model="eventData.category_id" class="form-control" required="true" ng-options="category.id as category.name for category in categories">
+						<select id="category" ng-change="filtersubcategories(eventData.category_id)" name="category" ng-model="eventData.category_id" class="form-control" required="true" ng-options="category.id as category.name for category in categories">
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="Category" class="control-label col-sm-2">Sub Category&nbsp;:</label>
+					<div class="col-sm-10">
+						<select id="subcategory" name="subcategory" ng-model="eventData.sub_category_id" class="form-control" required="true" ng-options="subcategory.id as subcategory.name for subcategory in filtered_subcategories">
 						</select>
 					</div>
 				</div>
